@@ -12,6 +12,9 @@ Enhancements:
 - #7068 Add Synergy restart when settings changed
 - #7072 Ability to run synergy as a pre-login agent
 - #7074 Add Synergy restart when server settings changed
+
+Github Actions:
+- #1043 Adding upload to s3 feature on all OSes
 ===========
 
 v1.14.1-rc
